# Rust-music-server

./: README.md
actix/: Cargo.toml
actix/src/: main.rs  serial.rs
actix/static/: Colour_Picker.js  index.html  style.css
ardiuno/: LED_controller.ino
