[package]
name = "wb_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-actors = "4.1.0"
actix = "0.13.0"
actix-files = "0.6.1"
serialport = "4.2.0"
env_logger = "0.9.0"